fix: cors issue and database host update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,12 @@ server.port=8082
 server.servlet.context-path=/api
 
 # CORS
-smbc.properties.allowed-origin=*
-smbc.properties.allowed-method=*
+smbc.properties.allowed-method=GET,POST,PUT,DELETE,OPTIONS
+smbc.properties.allowed-origin=http://localhost:5173
 
-spring.datasource.url=jdbc:mysql://localhost:3307/smbc_library_member
+spring.datasource.url=jdbc:mysql://localhost:3306/smbc_dev
 spring.datasource.username=root
-spring.datasource.password=P@ssw0rd!
+spring.datasource.password=yourmysqlpassword
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
